--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -71,6 +71,27 @@
                 android:layout_margin="20dp"
                 android:layout_height="wrap_content" />
 
+
+            <View
+                android:id="@+id/view2"
+                android:layout_width="match_parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/btn_open_gallery"
+                android:layout_margin="20dp"
+                android:background="@color/purple_200"
+                android:layout_height="3dp" />
+
+            <Button
+                android:id="@+id/btn_open_web_page"
+                app:layout_constraintStart_toStartOf="@id/txt_email_to"
+                app:layout_constraintEnd_toEndOf="@id/txt_email_to"
+                app:layout_constraintTop_toBottomOf="@id/view2"
+                android:text="Open Web Page"
+                android:layout_width="match_parent"
+                android:layout_margin="20dp"
+                android:layout_height="wrap_content" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.core.widget.NestedScrollView>
 
